// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders 1`] = `
[
  <button
    class="sc-beqWaB dslQFA"
  >
    Text
  </button>,
]
`;

exports[`Button Renders primary 1`] = `
[
  <button
    class="sc-beqWaB cFptEq"
  >
    Text
  </button>,
]
`;

exports[`Button Renders secondary 1`] = `
[
  <button
    class="sc-beqWaB dslQFA"
  >
    Text
  </button>,
]
`;
